new styling for driver and admin sections

--- a/projects/client/src/app/components/dashboard/dashboard.component.html
+++ b/projects/client/src/app/components/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
           <h5 class="card-title">
             My Driving Performance
           </h5>
-          <p class="card-text">View performance metrics uploaded by your supervisor</p>
+          <p class="card-text">View your performance metrics</p>
         </div>
       </div>
 
@@ -53,7 +53,7 @@
             <i class="bi bi-clock-history"></i>
           </div>
           <h5 class="card-title">Delivery Updates</h5>
-          <p class="card-text">Submit delivery updates and track outstanding deliveries</p>
+          <p class="card-text">Submit store delivery updates and track outstanding deliveries</p>
         </div>
       </div>
 
