product pdf reports added, pwa online caching issue fixed

--- a/projects/admin/src/app/components/dashboard/dashboard.component.html
+++ b/projects/admin/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,10 @@
 <div class="admin-container">
   <!-- Header/Navbar -->
   <header class="navbar">
-    <div class="logo">OPTIROUTE</div>
+    <div class="logo">
+      <div class="main-title">OPTIROUTE</div>
+      
+    </div>
     <div class="nav-links">
       <a class="nav-pill" (click)="logout()">
         <i class="bi bi-box-arrow-right"></i> LOGOUT
