--- a/projects/admin/src/app/components/driver-dashboard/driver-dashboard.component.html
+++ b/projects/admin/src/app/components/driver-dashboard/driver-dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="driver-dashboard">
   <header class="navbar">
-    <div class="logo">OPTIROUTE</div>
+    <div class="logo">
+      <div class="main-title">OPTIROUTE</div>
+      <div class="doc-subtitle">Document Title: Daily Driver Checklist Report Form, Issue 6, Approved by Jean Hart, Docu: VM02, Date 19.07.23</div>
+    </div>
     <div class="user-info">
       <span class="driver-name">{{ driverName }}</span>
       <a class="nav-pill" (click)="logout()">
